[gd_scene load_steps=23 format=2]

[ext_resource path="res://Battle/Battle.gd" type="Script" id=1]
[ext_resource path="res://Fonts/SemiBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Battle/HPBar.png" type="Texture" id=3]
[ext_resource path="res://Battle/VolumeBarEdge2.png" type="Texture" id=4]
[ext_resource path="res://joystick/virtual_joystick.tscn" type="PackedScene" id=5]
[ext_resource path="res://Battle/MessageBox.png" type="Texture" id=6]
[ext_resource path="res://Menu/Trophie.png" type="Texture" id=7]
[ext_resource path="res://Chest/Coins.png" type="Texture" id=8]
[ext_resource path="res://NickName/GreenBtnPressed.png" type="Texture" id=9]
[ext_resource path="res://NickName/GreenBtn.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 40
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 80
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 36
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 32
outline_size = 2
outline_color = Color( 0.262745, 0.870588, 0.14902, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 30
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="Node2D" parent="."]
z_index = 3

[node name="Ping" type="Label" parent="UI"]
margin_left = 1150.0
margin_top = 11.0
margin_right = 1224.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Time" type="Label" parent="UI"]
margin_left = 16.0
margin_top = 7.0
margin_right = 133.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Nick" type="Label" parent="UI"]
margin_left = 16.0
margin_top = 48.0
margin_right = 151.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 4 )
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="OpHP" type="TextureRect" parent="UI"]
margin_left = 16.0
margin_top = 85.0
margin_right = 296.0
margin_bottom = 134.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Fill" type="TextureRect" parent="UI/OpHP"]
margin_left = 7.0
margin_top = 12.0
margin_right = 273.0
margin_bottom = 37.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Text" type="Label" parent="UI/OpHP"]
margin_left = 7.0
margin_top = 4.0
margin_right = 273.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="MyHP" type="TextureRect" parent="UI"]
margin_left = 490.0
margin_top = 650.0
margin_right = 790.0
margin_bottom = 700.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Fill" type="TextureRect" parent="UI/MyHP"]
margin_left = 7.0
margin_top = 12.0
margin_right = 292.0
margin_bottom = 37.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Text" type="Label" parent="UI/MyHP"]
margin_left = 7.0
margin_top = 4.0
margin_right = 292.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Move" parent="UI" instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.862745 )
margin_top = 470.0
margin_bottom = 670.0
pressed_color = Color( 0.74902, 0.74902, 0.74902, 1 )
deadzone_size = 100.0
clampzone_size = 120.0
action_left = "ui_left_move"
action_right = "ui_right_move"
action_up = "ui_up_move"
action_down = "ui_down_move"

[node name="Shoot" parent="UI" instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.862745 )
margin_left = 1030.0
margin_top = 470.0
margin_right = 1230.0
margin_bottom = 670.0
deadzone_size = 100.0
clampzone_size = 120.0
action_left = "ui_left_shoot"
action_right = "ui_right_shoot"
action_up = "ui_up_shoot"
action_down = "ui_down_shoot"

[node name="Reloading" type="Label" parent="UI"]
margin_left = 888.0
margin_top = 640.0
margin_right = 980.0
margin_bottom = 695.0
custom_fonts/font = SubResource( 6 )
text = "0.0"
valign = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CountDown" type="Label" parent="UI"]
visible = false
margin_left = 590.0
margin_top = 50.0
margin_right = 690.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 7 )
text = "5"
align = 1
valign = 1

[node name="Message" type="TextureRect" parent="UI"]
visible = false
margin_left = 335.0
margin_top = 86.0
margin_right = 1017.0
margin_bottom = 587.0
texture = ExtResource( 6 )

[node name="Title" type="Label" parent="UI/Message"]
margin_left = 169.0
margin_top = 16.0
margin_right = 471.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 8 )
text = "Draw"
align = 1
valign = 1

[node name="Trophies" type="TextureRect" parent="UI/Message"]
margin_left = 455.0
margin_top = 118.0
margin_right = 575.0
margin_bottom = 257.0
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="UI/Message/Trophies"]
margin_left = 33.0
margin_top = 138.0
margin_right = 88.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 9 )
text = "0"
align = 1

[node name="Coins" type="TextureRect" parent="UI/Message"]
margin_left = 438.0
margin_top = 302.0
margin_right = 490.0
margin_bottom = 354.0
texture = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="UI/Message/Coins"]
margin_left = 61.0
margin_top = 11.0
margin_right = 122.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="XP" type="Label" parent="UI/Message"]
margin_left = 438.0
margin_top = 362.0
margin_right = 576.0
margin_bottom = 414.0
custom_fonts/font = SubResource( 10 )
text = "+0xp"
valign = 1

[node name="GridContainer" type="GridContainer" parent="UI/Message"]
margin_left = 58.0
margin_top = 105.0
margin_right = 321.0
margin_bottom = 346.0
custom_constants/vseparation = 12

[node name="Accuracy" type="Label" parent="UI/Message/GridContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = SubResource( 11 )
valign = 1

[node name="DamageDealt" type="Label" parent="UI/Message/GridContainer"]
margin_top = 62.0
margin_right = 200.0
margin_bottom = 112.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = SubResource( 11 )
valign = 1

[node name="DamageTaken" type="Label" parent="UI/Message/GridContainer"]
margin_top = 124.0
margin_right = 200.0
margin_bottom = 174.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = SubResource( 11 )
valign = 1

[node name="Efficiency" type="Label" parent="UI/Message/GridContainer"]
margin_top = 186.0
margin_right = 200.0
margin_bottom = 236.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = SubResource( 11 )
valign = 1

[node name="Ok" type="TextureButton" parent="UI/Message"]
margin_left = 204.0
margin_top = 357.0
margin_right = 388.0
margin_bottom = 416.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
expand = true
flip_h = true

[node name="Label" type="Label" parent="UI/Message/Ok"]
margin_left = 6.0
margin_top = 6.0
margin_right = 174.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 12 )
text = "OK"
align = 1
valign = 1

[node name="Map" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )
mouse_filter = 2
texture = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Objects" type="Node2D" parent="."]
z_index = 1

[node name="Bullets" type="Node2D" parent="Objects"]

[node name="Bushes" type="Node2D" parent="Objects"]
z_index = 2
z_as_relative = false

[connection signal="pressed" from="UI/Message/Ok" to="." method="_on_Ok_pressed"]
